fixed broken algorithms

--- a/Microsoft_frontend/index.html
+++ b/Microsoft_frontend/index.html
@@ -33,35 +33,35 @@
     </div>
   </div>
   <div>
-    <input type="radio" name="1" value="Breadth First Search"  class ="algotype">
+    <input type="radio" name="1" value="bfs"  class ="algotype">
     Breadth First Search Algorithm : In this algorithm, we start at the tree root and explore all of the neighbor nodes
     at the present depth prior to moving on to the nodes at the next depth level.
     <h3>Options</h3>
     <div>
-      <input type="radio" name="3" value="breadthfs_Allow_Diagonal" class="isdiagonal">
+      <input type="radio" name="3" value="Allow_Diagonal" class="isdiagonal">
       <label>Allow Diagonal</label> <br>
-      <input type="radio" name="3" value="breadthfs_Don't _Allow Diagonal"class="isdiagonal">
+      <input type="radio" name="3" value="Don't _Allow Diagonal"class="isdiagonal">
       <label>Don't Allow Diagonal</label> <br>
     </div>
   </div>
   <div>
-    <input type="radio" name="1" value="Best First Search" class ="algotype">
+    <input type="radio" name="1" value="BestFirstSearch" class ="algotype">
     Best First Search Algorithm : In best first search algorithm we use an evaluation function to decide which adjacent
     is most promising and then explore it.
     <h3>Heuristic</h3>
     <div id="best_fs" class="sub_options">
-      <input type="radio" name="2" value="bestfirst_manhattan"class="typeHeuristic" />
+      <input type="radio" name="2" value="Manhattan"class="typeHeuristic" />
       <label> Manhattan</label> <br>
-      <input type="radio" name="2" value="bestfirst_euclidean"class="typeHeuristic" />
+      <input type="radio" name="2" value="Euclidean"class="typeHeuristic" />
       <label> Euclidean</label> <br>
-      <input type="radio" name="2" value="bestfirst_chebyshev"class="typeHeuristic" />
+      <input type="radio" name="2" value="Chebyshev"class="typeHeuristic" />
       <label> Chebyshev</label> <br>
     </div>
     <h3>Options</h3>
     <div>
-      <input type="radio" name="3" value="bestfirst_Allow_Diagonal">
+      <input type="radio" name="3" value="Allow_Diagonal">
       <label>Allow Diagonal</label> <br>
-      <input type="radio" name="3" value="bestfirst_Don't_Allow_Diagonal">
+      <input type="radio" name="3" value="Don't_Allow_Diagonal">
       <label>Don't Allow Diagonal</label> <br>
     </div>
   </div>
@@ -72,9 +72,9 @@
     stopping the algorithm once the shortest path to the destination node has been determined.
     <h3>Options</h3>
     <div>
-      <input type="radio" name="3" value="Dijkstra's_Allow_Diagonal"class="isdiagonal">
+      <input type="radio" name="3" value="Allow_Diagonal"class="isdiagonal">
       <label>Allow Diagonal</label> <br>
-      <input type="radio" name="3" value="Dijkstra's_Don't_Allow_Diagonal"class="isdiagonal">
+      <input type="radio" name="3" value="Don't_Allow_Diagonal"class="isdiagonal">
       <label>Don't Allow Diagonal</label> <br>
     </div>
   </div>
