--- a/Microsoft_frontend/index.html
+++ b/Microsoft_frontend/index.html
@@ -79,6 +79,15 @@
     </div>
   </div>
   <div>
+    <h3>INSTRUCTIONS</h3>
+    <ol>
+      <li>Click on the cell where you want to begin <span id="Source">(Source)</span></li>
+      <li>Click on the cell to select end <span id="Destination">(Destination)</span></li>
+      <li>Click on the cells to create <span id="obstacles">obstacles</span> between the path</li>
+      <li>Click on the button start search after clicking on the next page</li>
+    </ol>
+  </div>
+  <div>
     
       <button class="next-page">Next Page</button>
    
